--- a/tab.html
+++ b/tab.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airborne</title>
-    <link rel="stylesheet" href="../startbootstrap-clean-blog-gh-pages/css/Scratch.css">
+    <link href="css/Scratch.css" rel="stylesheet"/> 
+    <!-- <link rel="stylesheet" href="../startbootstrap-clean-blog-gh-pages/css/Scratch.css"> -->
 </head>
 <body>
     <h2 id="top">AIRBORNE!</h2>
